# Heic-D-Code

./: .gitignore  CMakeLists.txt  Heic-D-Code.d.ts  Heic-D-Code.js  Heic-D-Code.wasm  LICENSE  README.md  Setup.cmake  libde265.bash  libde265.patch  libheif.patch  nproc.cmake  package.json
src/: CMakeLists.txt  main.cc  main.js
