add_executable(Heic-D-Code main.cc)
set(CMAKE_EXECUTABLE_SUFFIX ".js")
target_compile_features(Heic-D-Code PRIVATE cxx_std_20)

add_compile_definitions(__EMSCRIPTEN_STANDALONE_WASM__)
add_compile_definitions(NDEBUG)
set(WITH_X265 OFF)
set(WITH_KVAZAAR OFF)
set(WITH_OpenH264_DECODER OFF)
set(WITH_AOM_DECODER OFF)
set(WITH_AOM_ENCODER OFF)
set(WITH_LIBSHARPYUV OFF)
set(BUILD_TESTING OFF)
set(WITH_GDK_PIXBUF OFF)
set(WITH_EXAMPLES OFF)
set(ENABLE_PLUGIN_LOADING OFF)
set(LIBDE265_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/libde265/include")
set(LIBDE265_LIBRARY "${CMAKE_SOURCE_DIR}/libde265/lib/libde265.a")
add_subdirectory("${CMAKE_SOURCE_DIR}/libheif" "${CMAKE_BINARY_DIR}/libheif")
target_include_directories(Heic-D-Code PRIVATE "${CMAKE_SOURCE_DIR}/libheif/libheif/api")
target_include_directories(Heic-D-Code PRIVATE "${CMAKE_BINARY_DIR}/libheif")
target_link_libraries(Heic-D-Code PRIVATE heif)